Fixed spacing issues on desktop and mobile css

--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
-@import url('https://fonts.googleapis.com/css?family=Karla:400,700&display=swap'); /* CSS Variables */
+@import url("https://fonts.googleapis.com/css?family=Karla:400,700&display=swap"); /* CSS Variables */
 :root {
   --cyan: hsl(179, 62%, 43%);
   --bright-yellow: hsl(71, 73%, 54%);
   --grayish-blue: hsl(215, 17%, 81%);
   --light-gray: hsl(204, 43%, 93%);
-  --main-font-family: 'Karla', sans-serif;
+  --main-font-family: "Karla", sans-serif;
 }
 /*Core Styles*/
 html {
@@ -14,7 +14,13 @@ html {
 body {
   background-color: var(--light-gray);
 }
-h1, h2, h3, p, ul, li, a {
+h1,
+h2,
+h3,
+p,
+ul,
+li,
+a {
   font-family: var(--main-font-family);
   margin: 0;
   padding: 0;
@@ -24,14 +30,9 @@ h1, h2, h3, p, ul, li, a {
   justify-content: center;
 }
 .wrapper {
-<<<<<<< HEAD
-  width: 60%;
-  margin-top: 5rem;
-=======
   width: 80%;
   max-width: 80rem;
   margin-top: 10rem;
->>>>>>> 1b962de91aeb7a76830f65a4798ebbd84416addb
 }
 .top {
   background-color: white;
@@ -66,7 +67,6 @@ h2 {
   font-weight: 700;
   color: white;
   margin: 0 0 1.75rem 0;
-
 }
 .bottom-left p {
   display: flex;
@@ -79,7 +79,7 @@ h2 {
   font-size: 1.25rem;
 }
 .access {
-  margin-top: .75rem;
+  margin-top: 0.75rem;
 }
 .dollar {
   font-size: 3rem;
@@ -97,21 +97,16 @@ h2 {
   font-size: 1.6rem;
   font-weight: 700;
   color: white;
-  box-shadow: 8px 8px 8px rgba(0, 0, 0, .1);
-<<<<<<< HEAD
+  box-shadow: 8px 8px 8px rgba(0, 0, 0, 0.1);
   text-align: center;
   text-decoration: none;
-=======
-  cursor: pointer;
-
->>>>>>> 1b962de91aeb7a76830f65a4798ebbd84416addb
 }
 .btn:hover {
   background-color: white;
   color: var(--bright-yellow);
 }
 .bottom-right {
-  background-color: hsl(179, 62%, 43%, .9);
+  background-color: hsl(179, 62%, 43%, 0.9);
   padding: 7.5%;
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
@@ -122,7 +117,7 @@ h2 {
   font-size: 1.6rem;
 }
 .bottom-right ul li {
-  padding: .25rem 0;
+  padding: 0.25rem 0;
 }
 .attribution {
   text-align: center;
@@ -137,20 +132,23 @@ h2 {
   .top {
     padding: 5%;
   }
-.bottom-announcement {
-  display: flex;
-}
-.bottom-left {
-  border-bottom-left-radius: 10px;
-  width: 50%;
-  padding: 5%;
-
-}
-.bottom-right {
-  border-bottom-right-radius: 10px;
-  border-bottom-left-radius: 0px;
-  width: 50%;
-  padding: 5%;
-
-}
+  .wrapper {
+    width: 60%;
+    max-width: 80rem;
+    margin-top: 5rem;
+  }
+  .bottom-announcement {
+    display: flex;
+  }
+  .bottom-left {
+    border-bottom-left-radius: 10px;
+    width: 50%;
+    padding: 5%;
+  }
+  .bottom-right {
+    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 0px;
+    width: 50%;
+    padding: 5%;
+  }
 }
